pod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello1-service
spec:
  selector:
    app: hello1-py-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: NodePort
