pod/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello1-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: arch.homework
    http:
      paths:
        - path: /otusapp/hudeir($|/)(.*)
          backend:
            serviceName: hello1-service
            servicePort: 8000
